--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
+   <center> <h1>Home Page </h1></center> <br><br><br>
+      <a href="#">Home Page</a><br>
+<a href="tables/Home Work.html"target="_blank">Table 1</a><br>
+<a href="tables/Home Work 2.html"target="_blank">Table 2</a><br>
+<a href="tables/home Work 3.html"target="_blank">Table 3</a><br>
+<a href="tables/Home Work 4.html"target="_blank">Table 4</a><br>
+
+<br>
     <h2>My Multi Level Table</h2>
 
     <table border="1" >
@@ -45,12 +53,6 @@
 
 
     </table>
-    <a href="#">Home Page</a><br>
-<a href="tables/Home Work.html"target="_blank">Table 1</a><br>
-<a href="tables/Home Work 2.html"target="_blank">Table 2</a><br>
-<a href="tables/home Work 3.html"target="_blank">Table 3</a><br>
-<a href="tables/Home Work 4.html"target="_blank">Table 4</a><br>
-
-
+  
 </body>
 </html>
